[fix] Handle subpath and assets dir of custom themes

--- a/conf/mediagoblin.ini
+++ b/conf/mediagoblin.ini
@@ -11,6 +11,8 @@ data_basedir = #DATADIR#
 
 [mediagoblin]
 direct_remote_path = #PATH#/mgoblin_static/
+theme_web_path = #PATH#/theme_static/
+
 email_sender_address = "notice@#DOMAIN#"
 
 ## Uncomment and change to your DB's appropiate setting.
@@ -36,10 +38,13 @@ allow_reporting = true
 ## see the theming docs on how to install other themes.
 # theme = airy
 
+theme_linked_assets_dir = %(data_basedir)s/theme_static/
+
 ## If you want the terms of service displayed, you can uncomment this
 # show_tos = true
 
 user_privilege_scheme = "uploader,commenter,reporter"
+
 [storage:queuestore]
 base_dir = %(data_basedir)s/media/queue
 
