[enh] Restructure mediagoblin config files

--- a/conf/mediagoblin.ini
+++ b/conf/mediagoblin.ini
@@ -11,26 +11,17 @@ data_basedir = #DATADIR#
 
 [mediagoblin]
 direct_remote_path = #PATH#/mgoblin_static/
-theme_web_path = #PATH#/theme_static/
 
+### Email
 email_sender_address = "notice@#DOMAIN#"
-
-## Uncomment and change to your DB's appropiate setting.
-## Default is a local sqlite db "mediagoblin.db".
-## Don't forget to run `./bin/gmg dbupdate` after having changed it.
-sql_engine = postgresql:///#DBNAME#
-
-# Set to false to enable sending notices
 email_debug_mode = false
 
-# Set to false to disable registrations
-allow_registration = false
+### Database
+sql_engine = postgresql:///#DBNAME#
 
-# Set to false to disable the ability for users to report offensive content
-allow_reporting = true
-
-## Uncomment this to put some user-overriding templates here
-# local_templates = %(data_basedir)s/templates/
+### Theming
+theme_web_path = #PATH#/theme_static/
+theme_linked_assets_dir = %(data_basedir)s/theme_static/
 
 ## You can set your theme by specifying this (not specifying it will
 ## use the default theme).  Run `gmg assetlink` to apply the change.
@@ -38,12 +29,23 @@ allow_reporting = true
 ## see the theming docs on how to install other themes.
 # theme = airy
 
-theme_linked_assets_dir = %(data_basedir)s/theme_static/
+### Plugins
+plugin_web_path = #PATH#/plugin_static/
+plugin_linked_assets_dir = %(data_basedir)s/plugin_static/
+
+### Other settings
+allow_registration = false
+max_file_size = 1024
+user_privilege_scheme = "uploader,commenter,reporter"
+
+# Set to false to disable the ability for users to report offensive content
+allow_reporting = true
 
 ## If you want the terms of service displayed, you can uncomment this
 # show_tos = true
 
-user_privilege_scheme = "uploader,commenter,reporter"
+## Uncomment this to put some user-overriding templates here
+# local_templates = %(data_basedir)s/templates/
 
 [storage:queuestore]
 base_dir = %(data_basedir)s/media/queue
